# algorithms

./: .gitignore  CMakeLists.txt  README.md  build.sh  lecture1.py  main.py  make.sh
cmake/: path.cmake
insertion_sort/: CMakeLists.txt  main.cpp
merge_sort/: CMakeLists.txt  main.cpp
merge_sort/test/: CMakeLists.txt  test_merge_sort.cpp
old/: lecture1.py
python/: globals.py
python/cli/: cli.py  parser.py
python/cmd/: build.py  clean.py  fetch.py
python/dependency/: dependency.py  googletest.py
python/utils/: cmake.py  system.py
test/cmd/: test_build.py  test_clean.py
utils/: CMakeLists.txt
utils/include/: utils.hpp
utils/src/: utils.cpp
